# elsa

./: .gitignore  LICENSE  README.md  class_manager.py  mapping.py  pyproject.toml  requirements-dev.txt  run.sh
dataset/bing/: download_bing.md  download_bing_images.py
dataset/google/: download_google.md  download_google_images.py
gt_data/triple_inspected_May23rd/bing/: images.csv
gt_data/triple_inspected_May23rd/google/: images.csv
gt_data/triple_inspected_May23rd/merged/: label_id_dict_after_distr_thresholding.csv  label_per_box_sanity_checked_removed_unwanted_labels_unified_labels_after_distr_thresholding.csv
notebooks/: 01-resources.ipynb  03-predict.ipynb  05-evaluate.ipynb
src/: cdba.py
src/custom_detrex/: bert.py
src/elsa/: __init__.py  boxes.py  disjoint.py  drydoc.py  has.py  images.py  labels.py  local.py  report.py  resource.py  root.py  strict.py  util.py  ven.py
src/elsa/annotation/: annotation.py  consumed.py  disjoint.py  labels.py  limit_synonyms.py  prompts.py  stacked.py  unique.py
src/elsa/classes/: classes.py  disjoint.py  has.py  labels.py  nunique.py  stacked.py  subclasses.py  synonyms.py
src/elsa/combos/: combos.py  disjoint.py
src/elsa/files/: files.py
src/elsa/predict/: directory.py  predict.py  util.py
src/elsa/prediction/: alg1.py  averages.py  from_file.py  map_old_prompts.py  maximums.py  maxlogit.py  prediction.py  ranks.py  scores.py  to_svg.py  view.py
src/elsa/scored/: resource.py  scored.py  scores.py  summary.py  tosvgs.py  view.py
src/elsa/synonyms/: cat.py  natural.py  (+4 more)
src/magicpandas/: __init__.py
(+147 files in other folders)
