[project]
name = "elsa"
version = "1.0"
description = "Open-Vocabulary Object Detection in Urban Street View Imagery"
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = { file = "LICENSE" }
keywords = [
    "machine-learning",
    "data-science",
    "open-vocabulary",
    "open-vocabulary-object-detection",
    "object-detection",
    "urban",
    "social",
    "street-view",
    "street-side",
    "social-activities",
]

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
]
dynamic = ["dependencies"]


[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools >= 42",
    "wheel",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
dependencies = { file = ["requirements-dev.txt"] }

[tool.setuptools.packages.find]
where = ["src"]

